<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/constraintLayout">

    <TextView
        android:id="@+id/box1"
        style="@style/whiteBox"
        android:layout_width="0dp"

        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin1"
        android:layout_marginTop="@dimen/margin1"
        android:layout_marginRight="@dimen/margin1"
        android:text="@string/box_one"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/box2"
        style="@style/whiteBox"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="@dimen/margin1"
        android:layout_marginTop="@dimen/margin1"
        android:text="@string/box_two"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/box1" />

    <TextView
        android:id="@+id/box3"
        style="@style/whiteBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin1"

        android:layout_marginEnd="@dimen/margin1"
        android:text="@string/box_three"
        app:layout_constraintBottom_toTopOf="@+id/box4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/box2"
        app:layout_constraintTop_toTopOf="@+id/box2" />

    <TextView
        android:id="@+id/box4"
        style="@style/whiteBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin1"
        android:layout_marginTop="@dimen/margin1"
        android:layout_marginEnd="@dimen/margin1"
        android:layout_marginBottom="@dimen/margin1"
        android:text="@string/box_four"
        app:layout_constraintBottom_toTopOf="@+id/box5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/box2"
        app:layout_constraintTop_toBottomOf="@+id/box3" />

    <TextView
        android:id="@+id/box5"
        style="@style/whiteBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin1"
        android:layout_marginEnd="@dimen/margin1"

        android:text="@string/box_five"
        app:layout_constraintBottom_toBottomOf="@+id/box2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/box2"
        app:layout_constraintTop_toBottomOf="@+id/box4" />

    <Button
        android:id="@+id/red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin1"
        android:text="@string/redButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/blue"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin1"
        android:layout_marginBottom="@dimen/margin1"
        android:text="@string/blueButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/green"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/red" />

    <Button
        android:id="@+id/green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin1"
        android:layout_marginBottom="@dimen/margin1"
        android:text="@string/greenButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/blue" />


</androidx.constraintlayout.widget.ConstraintLayout>